[package]
name = "simtest"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
#nphysics3d = "0.9"
nphysics3d = { git = "https://github.com/jonlamb-gh/nphysics.git", branch = "fix-multibody-force" }
nalgebra = "0.16"
kiss3d = "0.17"
ncollide3d = "0.17"
pid = "1.2"
#gilrs = "0.6"
gilrs = { git = "https://gitlab.com/gilrs-project/gilrs.git", branch = "master" }
